--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
     "debounce": "^1.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -16,7 +13,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "npm run build && npm i -g serve && serve -s build"
+    "build-prod": "npm i && npm run build",
+    "deploy": " npm i -g serve && serve -s build",
+    "magic": "npm run build-prod && npm run deploy"
   },
   "eslintConfig": {
     "extends": "react-app"
