--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start-dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build-prod": "npm i && npm run build",
     "deploy": " npm i -g serve && serve -s build",
-    "magic": "npm run build-prod && npm run deploy"
+    "magic": "npm run build-prod && npm run deploy",
+    "start": "cd server && npm install && node server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
